# cndarray_test

./: .gitignore  CMakeLists.txt  Makefile  analyze.py  analyze2.py  common.h  consumer.cpp  consumer_data_2.csv  cxx_npy.h  parallel_producer.cpp  parallel_producer_data_10.csv  parallel_producer_data_11.csv  parallel_producer_data_5.csv  parallel_producer_data_7.csv  parallel_producer_data_9.csv  producer.cpp  producer_data.csv  producer_data_3.csv  producer_data_4.csv  producer_data_5.csv  semaphore.h
cmake/: Findlibev.cmake
redis_based/: analyze.py  consumer_data_2.csv  consumer_data_4.csv  parallel_producer.cpp  parallel_producer_data_6.csv  producer.cpp  producer_data_2.csv  producer_data_7.csv
socket_based/: analyze.py  cons_data_1.csv  cons_data_2.csv  cons_data_3.csv  consumer.cpp  listener.py  multicast.hpp  prod_data.csv  producer.cpp  sender.py
